deleted the dash

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>GRADIENT GENERATOR</title>
 </head>
 <body>
-    <h2>- GRADIENT GENERATOR -</h2>
+    <h2>GRADIENT GENERATOR</h2>
   
   <form>
     <h3>Настройки</h3>
