--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>GRADIENT GENERATOR</title>
 </head>
 <body>
-    <h2>GRADIENT GENERATOR</h2>
+    <h1>GRADIENT GENERATOR</h1>
   
   <form>
     <h3>Настройки</h3>
@@ -97,7 +97,7 @@
         justify-content: space-between;
         margin-bottom: 10px;
         padding-bottom: 10px;
-        border-bottom: 2px dashed gray;
+        border-bottom: 2px dashed rgb(68, 68, 68);
     }
     #color1, #color2 {
         width: 40px;
